# mariadb-columnstore-data-adapters

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
avro-kafka-adapter/: CMakeLists.txt
avro-kafka-adapter/src/: CMakeLists.txt  avro_to_cs.cpp  common.h  http_request.cpp  http_request.h  kafka_to_avro.cpp
avro-kafka-adapter/src/test/: test_http_request.cpp
cmake/: BuildCDC.cmake  BuildConnectorC.cmake  BuildMCSAPI.cmake  FindAvro.cmake  FindCDC.cmake  FindYamlCpp.cmake  Findjansson.cmake  Findkafkapp.cmake  Findmcsapi_windows.cmake  gitversion.cmake
cmake/cpack_windows/: redist.patch.in
informatica-cloud-columnstore-bulk-connector/: .gitignore  README.md
informatica-cloud-columnstore-bulk-connector/ict_metadata/: adapterdefinition.xml
informatica-cloud-columnstore-bulk-connector/usr/connection.adapter/i18n/: plugin.properties
informatica-cloud-columnstore-bulk-connector/usr/licensechecker/: .project
informatica-cloud-columnstore-bulk-connector/usr/messages/: build.properties  designtime.xml
informatica-cloud-columnstore-bulk-connector/usr/runtime.adapter/: .classpath
informatica-columnstore-bulk-connector/: .gitignore  README.md
informatica-columnstore-bulk-connector/ict_metadata/: adapterdefinition.xml
informatica-columnstore-bulk-connector/usr/connection.adapter/: build.properties  plugin.xml
informatica-columnstore-bulk-connector/usr/connection.adapter/lib/: info.txt
informatica-columnstore-bulk-connector/usr/messages/: .project
informatica-columnstore-bulk-connector/usr/metadata.semantic/: codegen_table.ini
informatica-columnstore-bulk-connector/usr/runtime.adapter/: .project
informatica-columnstore-bulk-connector/usr/runtime.semantic/: codegen_table.ini
informatica-columnstore-bulk-connector/usr/ui.wizard/: build.properties
informatica-powercenter-columnstore-bulk-connector/: README.md
informatica-powercenter-columnstore-bulk-connector/ict_metadata/: .project  adapterdefinition.xml
informatica-powercenter-columnstore-bulk-connector/usr/connection.adapter/: .classpath  .project
informatica-powercenter-columnstore-bulk-connector/usr/connection.adapter/i18n/: COLUMNSTOREBULKCONNECTORBundle.properties
informatica-powercenter-columnstore-bulk-connector/usr/messages/: .classpath  runtime.xml
informatica-powercenter-columnstore-bulk-connector/usr/metadata.adapter/: .project
informatica-powercenter-columnstore-bulk-connector/usr/metadata.semantic/: .project  build.properties
informatica-powercenter-columnstore-bulk-connector/usr/runtime.adapter/: build.properties
informatica-powercenter-columnstore-bulk-connector/usr/runtime.adapter/lib/: info.txt
informatica-powercenter-columnstore-bulk-connector/usr/runtime.semantic/: .classpath  .project
informatica-powercenter-columnstore-bulk-connector/usr/ui.wizard/: .project  plugin.xml
kafka-avro-adapter/: CMakeLists.txt  LICENSE  README.md  config-example.json
kafka-avro-adapter/doc/: Tutorial.md
kafka-avro-adapter/docker/: docker-compose.yml
kafka-avro-adapter/docker/mcs/: Dockerfile  install.sh
kafka-avro-adapter/docker/mcs/service/columnstore/: run
kafka-avro-adapter/docker/my-java-app/: Dockerfile  pom.xml  start.sh
kafka-avro-adapter/docker/my-java-app/src/main/java/com/example/app/: App.java
kafka-avro-adapter/docker/my-java-app/src/test/java/com/example/app/: AppTest.java
kafka-avro-adapter/src/: CMakeLists.txt  common.cpp  common.h  controller.cpp  controller.h  cs_producer.cpp  cs_producer.h  http_request.cpp  http_request.h  kafka_consumer.cpp  kafka_consumer.h  kafka_to_avro.cpp
kafka-avro-adapter/src/test/: CMakeLists.txt  test_http_request.cpp
kettle-columnstore-bulk-exporter-plugin/: .gitignore  CMakeLists.txt  README.md  build.gradle  build_win.gradle  gradle.properties  settings.gradle
kettle-columnstore-bulk-exporter-plugin/test/: export-to-mariadb.ktr  test.kjb  test.ps1  test.sh
maxscale-cdc-adapter/: CMakeLists.txt  LICENSE.TXT  README.md  mxs_adapter.cpp  version.h.in
maxscale-cdc-adapter/cmake/: BuildCDC.cmake  BuildJansson.cmake  BuildMCSAPI.cmake
maxscale-cdc-adapter/src/: config.cpp  config.hh  constants.h.in  context.hh  gtid.hh  mxs_adapter.cpp  utils.cpp  utils.hh
maxscale-cdc-adapter/test/: README.md  build.sh  docker-compose.yml  run_test.sh  sanity_check.sh  start.sh  stop.sh
maxscale-cdc-adapter/test/docker/: docker-compose.yml
maxscale-cdc-adapter/test/docker/mariadb/: Dockerfile  mariadb.sql
maxscale-cdc-adapter/test/docker/maxscale/: Dockerfile  master.ini  maxscale.cnf  maxscale.sql
maxscale-cdc-adapter/test/docker/mcs/: Dockerfile  README.md
maxscale-cdc-adapter/test/docker/mcs/service/columnstore/: run
maxscale-cdc-adapter/test/docker/mcs/service/rsyslogd/: run
maxscale-cdc-adapter/test/docker/mcs/service/systemd-journald/: run
maxscale-cdc-adapter/test/docker/mxs_adapter/: Columnstore.xml  Dockerfile  install.sh
maxscale-cdc-adapter/test/mariadb/: Dockerfile  mariadb.sql
maxscale-cdc-adapter/test/maxscale/: master.ini  maxscale.cnf  maxscale.sql
maxscale-cdc-adapter/test/mcs/: Columnstore.xml  Dockerfile  install.sh
maxscale-cdc-adapter/test/mxs_adapter/: Dockerfile  install.sh  runit_bootstrap  startupCmd.sh
maxscale-cdc-adapter/test/src/: config.json  core.py  test_basic.py  test_startup.py
maxscale-cdc-adapter/test/tests/: Dockerfile  config.json  startCmd.sh
maxscale-cdc-adapter/test/tests/src/: config.json  core.py  test_basic.py
maxscale-kafka-adapter/: .gitignore  CMakeLists.txt  LICENSE  README.md
maxscale-kafka-adapter/cmake/: Findmcsapi.cmake
maxscale-kafka-adapter/src/: CMakeLists.txt  cdc_consumer.cpp  cdc_consumer.h  cdc_parser.cpp  cdc_parser.h  debug.h  mcskafka.cpp
mcsimport/: 3rd party licenses.txt  CMakeLists.txt  LICENSE.txt  README.md  mcsimport.cpp
mcsimport/test/: README.md  test.py
mcsimport/test/alt_columnstore_con/: prepare.py
mcsimport/test/boundary/: DDL.sql  config.yaml  expected.csv  input.csv
mcsimport/test/implicit_df_non_mp/: config.yaml
mcsimport/test/load/: expected.csv  prepare.py
(+75 files in other folders)
