cmake_minimum_required(VERSION 2.8.2)

set(VERSION "1.1.5")
set(RELEASE "1")

option(RPM "Build an RPM" OFF)
IF(RPM)
	SET(CPACK_GENERATOR "RPM")
	SET(CPACK_RPM_PACKAGE_VERSION ${VERSION})
	SET(CPACK_RPM_PACKAGE_RELEASE ${RELEASE})
	SET(CPACK_RPM_PACKAGE_NAME "mariadb-columnstore-data-adpters")
	SET(ENGINE_ARCH "x86_64")
	SET(CPACK_PACKAGE_FILE_NAME "${CPACK_RPM_PACKAGE_NAME}-${CPACK_RPM_PACKAGE_VERSION}-${CPACK_RPM_PACKAGE_RELEASE}-${ENGINE_ARCH}-${RPM}")
	SET(CPACK_RPM_COMPONENT_INSTALL ON)
	SET(CPACK_COMPONENTS_ALL avro_kafka_adapter mcskafka mxs_adapter)

	SET(CPACK_RPM_AVRO_KAFKA_ADAPTER_PACKAGE_NAME "mariadb-columnstore-kafka-avro-adapters")
	SET(CPACK_RPM_AVRO_KAFKA_ADAPTER_FILE_NAME "${CPACK_RPM_AVRO_ALL_KAFKA_ADAPTER_PACKAGE_NAME}-${CPACK_RPM_PACKAGE_VERSION}-${CPACK_RPM_PACKAGE_RELEASE}-${ENGINE_ARCH}-${RPM}.rpm")
	
	SET(CPACK_RPM_MCSKAFKA_PACKAGE_NAME "mariadb-columnstore-kafka-adapters")
	SET(CPACK_RPM_MCSKAFKA_FILE_NAME "${CPACK_RPM_MCSKAFKA_PACKAGE_NAME}-${CPACK_RPM_PACKAGE_VERSION}-${CPACK_RPM_PACKAGE_RELEASE}-${ENGINE_ARCH}-${RPM}.rpm")

	SET(CPACK_RPM_MXS_ADAPTER_PACKAGE_NAME "mariadb-columnstore-maxscale-cdc-adapters")
	SET(CPACK_RPM_MXS_ADAPTER_FILE_NAME "${CPACK_RPM_MXS_ADAPTER_PACKAGE_NAME}-${CPACK_RPM_PACKAGE_VERSION}-${CPACK_RPM_PACKAGE_RELEASE}-${ENGINE_ARCH}-${RPM}.rpm")
	
	include(CPack)

	# rename packets manually if CMAKE < 3.6.3 #TODO
	if(${CMAKE_VERSION} VERSION_LESS "3.6.3") 
		add_custom_command(
			TARGET packed
			POST_BUILD
			COMMAND ${CMAKE_COMMAND} -E rename "${CPACK_PACKAGE_FILE_NAME}-avro_kafka_adapter.rpm" ${CPACK_RPM_AVRO_KAFKA_ADAPTER_FILE_NAME}
			COMMAND ${CMAKE_COMMAND} -E rename "${CPACK_PACKAGE_FILE_NAME}-mcskafka.rpm" ${CPACK_RPM_MCSKAFKA_FILE_NAME}
			COMMAND ${CMAKE_COMMAND} -E rename "${CPACK_PACKAGE_FILE_NAME}-mxs_adapter.rpm" ${CPACK_RPM_MXS_ADAPTER_FILE_NAME}
			WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
			COMMENT "-- Renaming packet file names"
		)
	endif()
ENDIF(RPM)

option(DEB "Build a DEB" OFF)
IF(DEB)
	SET(CPACK_GENERATOR "DEB")
	SET(CPACK_DEBIAN_PACKAGE_VERSION ${VERSION})
	SET(CPACK_DEBIAN_PACKAGE_RELEASE ${RELEASE})
	SET(CPACK_DEBIAN_PACKAGE_NAME "mariadb-columnstore-data-adapters")
	SET(CPACK_PACKAGE_CONTACT "MariaDB Corporation")
	SET(ENGINE_ARCH "x86_64")
	SET(CPACK_DEBIAN_PACKAGE_SHLIBDEPS ON)
	SET(CPACK_PACKAGE_FILE_NAME "${CPACK_DEBIAN_PACKAGE_NAME}-${CPACK_DEBIAN_PACKAGE_VERSION}-${CPACK_DEBIAN_PACKAGE_RELEASE}-${ENGINE_ARCH}-${DEB}")
	SET(CPACK_DEB_COMPONENT_INSTALL ON)
	SET(CPACK_COMPONENTS_ALL avro_kafka_adapter mcskafka mxs_adapter)

	SET(CPACK_DEBIAN_AVRO_KAFKA_ADAPTER_PACKAGE_NAME "mariadb-columnstore-kafka-avro-adapters")
	SET(CPACK_DEBIAN_AVRO_KAFKA_ADAPTER_FILE_NAME "${CPACK_DEBIAN_AVRO_KAFKA_ADAPTER_PACKAGE_NAME}-${CPACK_DEBIAN_PACKAGE_VERSION}-${CPACK_DEBIAN_PACKAGE_RELEASE}-${ENGINE_ARCH}-${DEB}.deb")
	
	SET(CPACK_DEBIAN_MCSKAFKA_PACKAGE_NAME "mariadb-columnstore-kafka-adapters")
	SET(CPACK_DEBIAN_MCSKAFKA_FILE_NAME "${CPACK_DEBIAN_MCSKAFKA_PACKAGE_NAME}-${CPACK_DEBIAN_PACKAGE_VERSION}-${CPACK_DEBIAN_PACKAGE_RELEASE}-${ENGINE_ARCH}-${DEB}.deb")

	SET(CPACK_DEBIAN_MXS_ADAPTER_PACKAGE_NAME "mariadb-columnstore-maxscale-cdc-adapters")
	SET(CPACK_DEBIAN_MXS_ADAPTER_FILE_NAME "${CPACK_DEBIAN_MXS_ADAPTER_PACKAGE_NAME}-${CPACK_DEBIAN_PACKAGE_VERSION}-${CPACK_DEBIAN_PACKAGE_RELEASE}-${ENGINE_ARCH}-${DEB}.deb")

	include(CPack)

	# rename packets manually if CMAKE < 3.6.3 #TODO
	if(${CMAKE_VERSION} VERSION_LESS "3.6.3" AND DEB) 
		add_custom_command(
			TARGET packed
			POST_BUILD
			COMMAND ${CMAKE_COMMAND} -E rename "${CPACK_PACKAGE_FILE_NAME}-avro_kafka_adapter.deb" ${CPACK_DEBIAN_AVRO_KAFKA_ADAPTER_FILE_NAME}
			COMMAND ${CMAKE_COMMAND} -E rename "${CPACK_PACKAGE_FILE_NAME}-mcskafka.deb" ${CPACK_DEBIAN_MCSKAFKA_FILE_NAME}
			COMMAND ${CMAKE_COMMAND} -E rename "${CPACK_PACKAGE_FILE_NAME}-mxs_adapter.deb" ${CPACK_DEBIAN_MXS_ADAPTER_FILE_NAME}
			WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
			COMMENT "-- Renaming packet file names"
		)
	endif()
ENDIF(DEB)

option(TEST_RUNNER "Build the test suite" OFF)
if (TEST_RUNNER)
  enable_testing()
  include(CTest)
endif (TEST_RUNNER)

option(KAFKA "Build the Kafka-Avro to ColumnStore Data Adatper" ON)
IF(KAFKA)
	add_subdirectory(kafka-avro-adapter)
ENDIF(KAFKA)

option(KETTLE "Build the Kettle / PDI ColumnStore Bulk Write Plugin" ON)
IF(KETTLE)
	add_subdirectory(kettle-columnstore-bulk-exporter-plugin)
ENDIF(KETTLE)

option(MAX_CDC "Build the MaxScale CDC to ColumnStore Data Adapter" ON)
IF(MAX_CDC)
	add_subdirectory(maxscale-cdc-adapter)
ENDIF(MAX_CDC)

option(MAX_KAFKA "Build the MaxScale Kafka+CDC to ColumnStore Data Adapter" ON)
IF(MAX_KAFKA)
	add_subdirectory(maxscale-kafka-adapter)
ENDIF(MAX_KAFKA)

MESSAGE(STATUS "-----------------------------------------------")
MESSAGE(STATUS "KAFKA = ${KAFKA}")
MESSAGE(STATUS "KETTLE = ${KETTLE}")
MESSAGE(STATUS "MAX_CDC = ${MAX_CDC}")
MESSAGE(STATUS "MAX_KAFKA = ${MAX_KAFKA}")
MESSAGE(STATUS "TEST_RUNNER = ${TEST_RUNNER}")
MESSAGE(STATUS "RPM = ${RPM}")
MESSAGE(STATUS "DEB = ${DEB}")
MESSAGE(STATUS "Change a values with: cmake -D<Variable>=<Value>")
MESSAGE(STATUS "------------------------------------------------")
MESSAGE(STATUS)
